gcc-14.2.0/gcc/testsuite/gdc.test/compilable/extra-files/minimal/object.d
version https://git-lfs.github.com/spec/v1
oid sha256:662a1c9fabb0009a42e3eeb596476c3675d420abe729b570957d683fc1d8c440
size 15
